--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 22,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -891,15 +891,17 @@
         "        residuals = y - predictions\n",
         "\n",
         "        df_residual = X.shape[0] - X.shape[1]\n",
-        "        residual_variance = (residuals.T @ residuals) / df_residual\n",
+        "        residual_variance = (residuals.T @ residuals)[0, 0] / df_residual\n",
         "\n",
         "        covariance_matrix = residual_variance * XtX_inv\n",
         "        standard_errors = np.sqrt(np.diag(covariance_matrix)).reshape(-1, 1)\n",
         "        t_stats = coefficients / standard_errors\n",
-        "        p_values = 2 * (1 - stats.t.cdf(np.abs(t_stats), df=df_residual))\n",
         "\n",
-        "        for idx, var in enumerate(self.x.columns):\n",
-        "            self.results[var] = {\n",
+        "\n",
+        "        p_values = 1 - stats.t.cdf(np.abs(t_stats), df=df_residual)\n",
+        "\n",
+        "        for idx, col in enumerate(self.x.columns):\n",
+        "            self.results[col] = {\n",
         "                'coefficient': float(coefficients[idx]),\n",
         "                'standard_error': float(standard_errors[idx]),\n",
         "                't_stat': float(t_stats[idx]),\n",
@@ -919,6 +921,8 @@
         "        })\n",
         "\n",
         "        summary_df = summary_df[[\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]]\n",
+        "\n",
+        "\n",
         "        print(summary_df.to_string(index=False))\n",
         "\n",
         "\n",
